Add /info route
